--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <div class="container-header">
 
         <div class="item1">
-            <!-- <span>1</span> -->
         </div>
         <div class="item2">
-            <!-- <span>2</span> -->
         </div>
         <div class="item3">
-            <!-- <span>3</span> -->
         </div>
+    </div>
+
+    <div id="infTest">
+        
     </div>
 <script src="scrip.js"></script>
 </body>
